added new coffee icon with removed bg 2

--- a/public/output.css
+++ b/public/output.css
@@ -716,6 +716,10 @@ video {
   height: 2rem;
 }
 
+.h-9{
+  height: 2.25rem;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -750,6 +754,10 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-9{
+  width: 2.25rem;
 }
 
 .flex-col{
@@ -904,7 +912,7 @@ video {
   --text-color: hsl(0, 0%, 35%);
   --text-color-light: hsl(0, 0%, 64%);
   /* --body-color: #DCDCDC; */
-  --main-bg-color: rgba(228, 228, 228, 0.519);
+  --main-bg-color: rgba(219, 219, 219, 0.441);
   --body-color: #111318;
   --container-color: hsl(0, 0%, 83%);
   /* ---- fonts ---- */
