--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -402,7 +402,7 @@ a, button{
     }
     .nav .nav__social__links .mobile a{
         border: 0.25rem solid;
-        border-color: var(--link-border-color);
+        border-color: rgba(212, 212, 212, 0.355);
     }
     /* --home-- */
     .home{
