--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -400,6 +400,9 @@ a, button{
         left: 0;
         transform: translateX(0);
     }
+    .nav .nav__action__links .email{
+        font-size: 0.85rem;
+    }
     .nav .nav__social__links .mobile a{
         border: 0.25rem solid;
         border-color: rgba(212, 212, 212, 0.451);
@@ -458,8 +461,8 @@ a, button{
     /* --contact-- */
     .contact .heading .image-container{
         border-top: 0.046975rem solid rgba(173, 173, 173, 0.279);
-        width: 7.25rem;
-        height: 7.25rem;
+        width: 7.5rem;
+        height: 7.5rem;
         background-color: rgb(239, 239, 239);
         /* background-image: linear-gradient(180deg, hsl(0, 0%, 77%), #f2f2f2 90%); */
     }
