--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -223,7 +223,7 @@ a, button{
     background-color: var(--white-color);
     color: var(--first-color);
     top: 2rem;
-    left: 7rem;
+    left: 8rem;
     transform: rotate(-10deg);
 }
 @keyframes bounce{
@@ -261,7 +261,7 @@ a, button{
 }
 .carousel-track {
     /* width: calc(100% * 7); */
-    animation: scroll 30s linear infinite;
+    animation: scroll 45s linear infinite;
 }
 .carousel img:nth-child(1){
     height: 2rem;
@@ -300,12 +300,6 @@ a, button{
 .contact .heading .title{
     font-size: 1.9rem;
 }
-/* .contact .heading{
-    background-color: red;
-}
-.contact .actions{
-    background-color: blue;
-} */
 .contact .actions a{
     background-color: var(--first-color);
     color: var(--white-color);
@@ -399,6 +393,10 @@ a, button{
     .home .content{
         width: 100%;
     }
+    .home .profile .name{
+        top: 1rem;
+        left: 6.5rem;
+    }
 }
 
 @media screen and (max-width: 34.375rem) { /*--Iphone: 550px--*/
@@ -435,7 +433,7 @@ a, button{
         height: 8rem;
     }
     .home .profile .name{
-        top: 1rem;   
+        top: 1rem;
         font-weight: 500;
     }
     .home .profile .arrow{
