--- a/public/output.css
+++ b/public/output.css
@@ -780,6 +780,10 @@ video {
   width: 11rem;
 }
 
+.w-8{
+  width: 2rem;
+}
+
 .w-9{
   width: 2.25rem;
 }
@@ -815,6 +819,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-normal{
+  justify-content: normal;
 }
 
 .justify-center{
@@ -916,11 +924,6 @@ video {
 .text-6xl{
   font-size: 3.75rem;
   line-height: 1;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .text-lg{
@@ -1147,13 +1150,6 @@ a, button{
   color: var(--white-color);
 }
 
-/* .nav .nav__action__links .language .polish{
-    background-image: linear-gradient(0deg, red 30%, white 55%);
-} 
-.nav .nav__action__links .language .german{
-    background-image: linear-gradient(0deg, gold 40%, red 55%, black 20%);
-} */
-
 .nav .nav__action__links .desktop{
   color: var(--first-color);
 }
@@ -1247,6 +1243,37 @@ a, button{
   background-color: var(--white-color);
   border-color: rgba(212, 212, 212, 0.451);
   transform: translate(-15px, -15px) rotate(-10deg);
+}
+
+/* ============== PROJECTS SECTION ============== */
+
+.projects{
+  /* background-color: red; */
+}
+
+.projects .title{
+  background-color: var(--container-color);
+  border-color: transparent;
+  transform: translate(-15px, -15px) rotate(-10deg);
+}
+
+.projects .content .top .proj-link{
+  width: 26.75rem;
+  height: 15.375;
+}
+
+.projects .content .top .proj-link .arrow{
+  background-color: rgba(95, 95, 95, 0.842);
+  border-radius: 0.5rem;
+  color: var(--white-color);
+  top: 0.75rem;
+  right: 0.75rem;
+}
+
+.projects .content .top .proj-link .proj-img{
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
 }
 
 /* ============== CONTACT SECTION ============== */
@@ -1424,7 +1451,8 @@ a, button{
     font-size: 1.5rem;
   }
 
-  .services .title{
+  .services .title,
+    .projects .title{
     font-size: 0.75rem;
   }
 
@@ -1442,6 +1470,12 @@ a, button{
 
   .services .serv-con .info .text-break{
     display: flex;
+  }
+
+  /* --projects-- */
+
+  .projects .title{
+    border-color: rgba(212, 212, 212, 0.451);
   }
 
   /* --contact-- */
