--- a/public/output.css
+++ b/public/output.css
@@ -780,8 +780,8 @@ video {
   height: 2.25rem;
 }
 
-.h-\[0\.025rem\]{
-  height: 0.025rem;
+.h-\[0\.1125rem\]{
+  height: 0.1125rem;
 }
 
 .h-\[15\.375rem\]{
@@ -794,14 +794,6 @@ video {
 
 .h-full{
   height: 100%;
-}
-
-.h-\[0\.05rem\]{
-  height: 0.05rem;
-}
-
-.h-\[0\.035rem\]{
-  height: 0.035rem;
 }
 
 .w-10{
@@ -1078,6 +1070,7 @@ video {
   --link-border-color: rgba(212, 212, 212, 0.275);
   --text-color-light: hsl(0, 0%, 64%);
   --container-color: rgba(219, 219, 219, 0.441);
+  --container-color-desktop: rgb(214, 214, 214);
   --info-overlay-color: rgba(123, 123, 123, 0.744);
   /* ---- fonts ---- */
   --body-font: "Bai Jamjuree", sans-serif;
@@ -1229,7 +1222,7 @@ a, button{
 }
 
 .home, .services, .footer{
-  background-color: rgb(214, 214, 214);
+  background-color: var(--container-color-desktop);
 }
 
 /* ============== HEADER & NAVBAR ============== */
@@ -1345,8 +1338,8 @@ a, button{
 /* ============== PROJECTS SECTION ============== */
 
 .projects .title{
-  background-color: var(--container-color);
-  border-color: rgba(212, 212, 212, 0.451);
+  background-color: var(--container-color-desktop);
+  color: var(--first-color);
   transform: translate(-15px, -15px) rotate(-10deg);
 }
 
@@ -1399,7 +1392,6 @@ a, button{
 
 .footer .line{
   background-color: var(--white-color);
-  /* background-color: rgba(203, 203, 203, 0.866); */
 }
 
 /* ============== MEDIA QUERIES ============== */
@@ -1558,7 +1550,8 @@ a, button{
     border: 0.046875rem solid rgba(173, 173, 173, 0.279);
   }
 
-  .services .title-info{
+  .services .title-info,
+    .projects .title-info{
     font-size: 1.5rem;
   }
 
@@ -1585,8 +1578,40 @@ a, button{
 
   /* --projects-- */
 
-  .projects{
+  .projects .content .proj-cont{
+    width: 100%;
+    flex-direction: column;
+    margin-right: 0;
+  }
+
+  .projects .content .proj-cont:nth-child(1) .proj-link:nth-child(1),
+    .projects .content .proj-cont:nth-child(2) .proj-link:nth-child(1),
+    .projects .content .proj-cont:nth-child(2) .proj-link:nth-child(2){
+    margin-right: 0!important;
+  }
+
+  .projects .proj-info-text-break-1{
     display: none;
+  }
+
+  .projects .proj-info-text-break-2{
+    display: flex;
+  }
+
+  .projects .content .proj-cont .proj-link .arrow{
+    font-weight: 500;
+  }
+
+  .projects .content .proj-cont .proj-link{
+    /* box-shadow: none!important; */
+    margin-bottom: 1.5rem;
+    width: 100%;
+    box-shadow: 0.21rem 0.21rem 0.42rem rgba(0, 0, 0, 0.381)!important;
+  }
+
+  .projects .content .proj-cont .proj-link:hover .proj-img{
+    transform: scale(1);
+    box-shadow: none;
   }
 
   /* --contact-- */
