--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -471,7 +471,7 @@ a, button{
         width: 7.5rem;
     }
     /* --services-- */
-    .services, .footer{
+    .services{
         border-radius: 5rem;
         border: 0.046875rem solid rgba(173, 173, 173, 0.279);
     }
@@ -532,6 +532,11 @@ a, button{
         background-color: rgb(239, 239, 239);
     }
     /* --footer-- */
+    .footer{
+        border-top-left-radius: 5rem;
+        border-top-right-radius: 5rem;
+        border: 0.046875rem solid rgba(173, 173, 173, 0.279);
+    }
     .footer .content .socials a{
         border: 0.25rem solid;
         border-color: var(--link-border-color);
@@ -547,7 +552,7 @@ a, button{
     .projects .content .proj-cont .proj-link{
         margin-bottom: 1.625rem!important;
         width: 98%;
-        height: 12.5rem;
+        height: 13rem;
     }
     .projects .content .proj-cont:nth-child(1) .proj-link:nth-child(1){
         width: 98%;
