added page loader

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -132,19 +132,32 @@ a, button{
     opacity: 1;
     scale: 1;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* --Page loader-- */
+.page-loader{
+    /* background-color: var(--container-color-desktop); */
+    background-color: rgba(219, 219, 219, 0.97);
+    transition: 0.5s ease;
+}
+.page-loader .loader {
+    width: 45px;
+    aspect-ratio: .75;
+    --c: no-repeat linear-gradient(#242424 0 0);
+    background: 
+      var(--c) 0%   50%,
+      var(--c) 50%  50%,
+      var(--c) 100% 50%;
+    background-size: 20% 50%;
+    animation: loader-bars 1s infinite linear;
+  }
+  @keyframes loader-bars {
+    20% {background-position: 0% 0%  ,50% 50% ,100% 50% }
+    40% {background-position: 0% 100%,50% 0%  ,100% 50% }
+    60% {background-position: 0% 50% ,50% 100%,100% 0%  }
+    80% {background-position: 0% 50% ,50% 50% ,100% 100%}
+  }
+  .page-loader .name{
+    color: var(--first-color);
+  }
 
 
 
