--- a/public/output.css
+++ b/public/output.css
@@ -788,8 +788,8 @@ video {
   height: 2.25rem;
 }
 
-.h-\[0\.1125rem\]{
-  height: 0.1125rem;
+.h-\[0\.1rem\]{
+  height: 0.1rem;
 }
 
 .h-\[15\.375rem\]{
@@ -1074,6 +1074,7 @@ video {
   /* ---- colors ---- */
   --first-color: #242424;
   --white-color: hsl(0, 0%, 95%);
+  --aqua-color: aqua;
   --section-border-color: rgba(187, 187, 187, 0.374);
   --link-border-color: rgba(212, 212, 212, 0.23);
   --text-color-light: hsl(0, 0%, 64%);
@@ -1229,10 +1230,6 @@ a, button{
   color: transparent;
 }
 
-.home, .services, .footer{
-  background-color: var(--container-color-desktop);
-}
-
 /* --Scroll reveal animation-- */
 
 .not-shown{
@@ -1254,48 +1251,62 @@ a, button{
 }
 
 .page-loader .loader{
-  aspect-ratio: .75;
-  --c: no-repeat linear-gradient(#242424 0 0);
-  background: 
-      var(--c) 0%   50%,
-      var(--c) 50%  50%,
-      var(--c) 100% 50%;
-  background-size: 20% 50%;
-  animation: loader-bars 1s infinite linear;
+  width: 45px;
+  aspect-ratio: 1;
+  --c:no-repeat linear-gradient(#000 0 0);
+  background: var(--c), var(--c), var(--c);
+  animation: 
+      l15-1 1s infinite,
+      l15-2 1s infinite;
 }
 
-@keyframes loader-bars{
-  20% {
-    background-position: 0% 0%  ,50% 50% ,100% 50%
+@keyframes l15-1{
+  0%,100% {
+    background-size:20% 100%
   }
 
-  40% {
-    background-position: 0% 100%,50% 0%  ,100% 50%
-  }
-
-  60% {
-    background-position: 0% 50% ,50% 100%,100% 0%
-  }
-
-  80% {
-    background-position: 0% 50% ,50% 50% ,100% 100%
+  33%,66% {
+    background-size:20% 40%
   }
 }
 
-/* ============== HEADER & NAVBAR ============== */
+@keyframes l15-2{
+  0%,33%   {
+    background-position: 0    0,50% 100%,100% 100%
+  }
 
-.header{
-  background-color: transparent;
+  66%,100% {
+    background-position: 100% 0,0   100%,50%  100%
+  }
 }
 
-.nav .nav__action__links .email{
-  background-color: var(--first-color);
+/* --Color classes-- */
+
+.clr-first{
+  color: var(--first-color);
+}
+
+.clr-white{
   color: var(--white-color);
 }
 
-.nav .nav__action__links .desktop{
-  color: var(--first-color);
+.clr-aqua{
+  color: var(--aqua-color);
 }
+
+.bg-first{
+  background-color: var(--first-color);
+}
+
+.bg-whitec{
+  background-color: var(--white-color);
+}
+
+.bg-container-desktop{
+  background-color: var(--container-color-desktop);
+}
+
+/* ============== HEADER & NAVBAR ============== */
 
 .nav .nav__social__links .desktop a::after{
   content: "";
@@ -1312,11 +1323,6 @@ a, button{
   width: 100%;
 }
 
-.nav .nav__social__links .mobile a{
-  background-color: var(--white-color);
-  color: var(--first-color);
-}
-
 /* ============== HOME SECTION ============== */
 
 .home .profile .image{
@@ -1324,8 +1330,6 @@ a, button{
 }
 
 .home .profile .name{
-  background-color: var(--white-color);
-  color: var(--first-color);
   animation: name-bounce 2.5s infinite ease-in-out;
 }
 
@@ -1355,16 +1359,7 @@ a, button{
   background-image: none!important;
 }
 
-.home .content .github__link{
-  background-color: var(--first-color);
-  color: var(--white-color);
-}
-
 /* ============== CAROUSEL SECTION ============== */
-
-.carousel{
-  background-color: var(--white-color);
-}
 
 .carousel-track {
   animation: carousel-scroll 45s linear infinite;
@@ -1383,18 +1378,11 @@ a, button{
 /* ============== SERVICES SECTION ============== */
 
 .services .title{
-  background-color: var(--white-color);
   border-color: rgba(212, 212, 212, 0.451);
   transform: translate(-15px, -15px) rotate(-10deg);
 }
 
 /* ============== PROJECTS SECTION ============== */
-
-.projects .title{
-  background-color: var(--container-color-desktop);
-  color: var(--first-color);
-  transform: translate(-15px, -15px) rotate(-10deg);
-}
 
 .projects .content .proj-cont:nth-child(1) .proj-link:nth-child(1),
 .projects .content .proj-cont:nth-child(2) .proj-link:nth-child(1),
@@ -1418,32 +1406,21 @@ a, button{
 .projects .content .proj-cont .proj-link .proj-details{
   border-bottom-left-radius: 0.8rem;
   border-top-right-radius: 0.8rem;
-  background-color: var(--first-color);
-  color: var(--white-color);
 }
 
 .projects .content .proj-cont .proj-link .proj-details .proj-stack{
   font-size: 0.725rem;
-  color: aqua;
 }
 
 /* ============== CONTACT SECTION ============== */
 
-.contact .actions a{
-  background-color: var(--first-color);
-  color: var(--white-color);
-}
-
 .contact .actions a:nth-child(2){
-  background-color: var(--white-color);
-  color: var(--first-color);
   border-color: var(--link-border-color);
 }
 
-/* ============== FOOTER ============== */
-
-.footer .line{
-  background-color: var(--white-color);
+.contact .heading .image-container{
+  border-top: 0.046975rem solid var(--section-border-color);
+  background-color: rgb(239, 239, 239);
 }
 
 /* ============== MEDIA QUERIES ============== */
@@ -1723,10 +1700,8 @@ a, button{
   /* --contact-- */
 
   .contact .heading .image-container{
-    border-top: 0.046975rem solid var(--section-border-color);
     width: 7.5rem;
     height: 7.5rem;
-    background-color: rgb(239, 239, 239);
   }
 
   /* --footer-- */
