--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
     /* ---- colors ---- */
     --first-color: #242424;
     --white-color: hsl(0, 0%, 95%);
+    --aqua-color: aqua;
     --section-border-color: rgba(187, 187, 187, 0.374);
     --link-border-color: rgba(212, 212, 212, 0.23);
     --text-color-light: hsl(0, 0%, 64%);
@@ -119,9 +120,6 @@ a, button{
     background-clip: text;
     color: transparent;
 }
-.home, .services, .footer{
-   background-color: var(--container-color-desktop);
-}
 /* --Scroll reveal animation-- */
 .not-shown{
     opacity: 0;
@@ -138,23 +136,41 @@ a, button{
     transition: 0.5s ease;
 }
 .page-loader .loader{
-    aspect-ratio: .75;
-    --c: no-repeat linear-gradient(#242424 0 0);
-    background: 
-      var(--c) 0%   50%,
-      var(--c) 50%  50%,
-      var(--c) 100% 50%;
-    background-size: 20% 50%;
-    animation: loader-bars 1s infinite linear;
+    width: 45px;
+    aspect-ratio: 1;
+    --c:no-repeat linear-gradient(#000 0 0);
+    background: var(--c), var(--c), var(--c);
+    animation: 
+      l15-1 1s infinite,
+      l15-2 1s infinite;
 }
-@keyframes loader-bars{
-   20% {background-position: 0% 0%  ,50% 50% ,100% 50% }
-   40% {background-position: 0% 100%,50% 0%  ,100% 50% }
-   60% {background-position: 0% 50% ,50% 100%,100% 0%  }
-   80% {background-position: 0% 50% ,50% 50% ,100% 100%}
+@keyframes l15-1{
+   0%,100% {background-size:20% 100%}
+   33%,66% {background-size:20% 40%}
 }
-
-
+@keyframes l15-2{
+   0%,33%   {background-position: 0    0,50% 100%,100% 100%}
+   66%,100% {background-position: 100% 0,0   100%,50%  100%}
+}
+/* --Color classes-- */
+.clr-first{
+    color: var(--first-color);
+}
+.clr-white{
+    color: var(--white-color);
+}
+.clr-aqua{
+    color: var(--aqua-color);
+}
+.bg-first{
+    background-color: var(--first-color);
+}
+.bg-whitec{
+    background-color: var(--white-color);
+}
+.bg-container-desktop{
+    background-color: var(--container-color-desktop);
+}
 
 
 
@@ -163,16 +179,6 @@ a, button{
 
 
 /* ============== HEADER & NAVBAR ============== */
-.header{
-    background-color: transparent;
-}
-.nav .nav__action__links .email{
-    background-color: var(--first-color);
-    color: var(--white-color);
-}
-.nav .nav__action__links .desktop{
-    color: var(--first-color);
-}
 .nav .nav__social__links .desktop a::after{
     content: "";
     position: absolute;
@@ -186,19 +192,11 @@ a, button{
 .nav .nav__social__links .desktop a:hover::after{
     width: 100%;
 }
-.nav .nav__social__links .mobile a{
-    background-color: var(--white-color);
-    color: var(--first-color);
-}
-
-
 /* ============== HOME SECTION ============== */
 .home .profile .image{
     border-color: var(--white-color);
 }
 .home .profile .name{
-    background-color: var(--white-color);
-    color: var(--first-color);
     animation: name-bounce 2.5s infinite ease-in-out;
 }
 @keyframes name-bounce{
@@ -218,16 +216,8 @@ a, button{
 .home .content .info .hht{
     background-image: none!important;
 }
-.home .content .github__link{
-    background-color: var(--first-color);
-    color: var(--white-color);
-}
-
 
 /* ============== CAROUSEL SECTION ============== */
-.carousel{
-    background-color: var(--white-color);
-}
 .carousel-track {
     animation: carousel-scroll 45s linear infinite;
 }
@@ -243,18 +233,12 @@ a, button{
 
 /* ============== SERVICES SECTION ============== */
 .services .title{
-    background-color: var(--white-color);
     border-color: rgba(212, 212, 212, 0.451);
     transform: translate(-15px, -15px) rotate(-10deg);
 }
 
 
 /* ============== PROJECTS SECTION ============== */
-.projects .title{
-    background-color: var(--container-color-desktop);
-    color: var(--first-color);
-    transform: translate(-15px, -15px) rotate(-10deg);
-}
 .projects .content .proj-cont:nth-child(1) .proj-link:nth-child(1),
 .projects .content .proj-cont:nth-child(2) .proj-link:nth-child(1),
 .projects .content .proj-cont:nth-child(2) .proj-link:nth-child(3){
@@ -273,34 +257,20 @@ a, button{
 .projects .content .proj-cont .proj-link .proj-details{
     border-bottom-left-radius: 0.8rem;
     border-top-right-radius: 0.8rem;
-    background-color: var(--first-color);
-    color: var(--white-color);
 }
 .projects .content .proj-cont .proj-link .proj-details .proj-stack{
     font-size: 0.725rem;
-    color: aqua;
 }
 
 
 /* ============== CONTACT SECTION ============== */
-.contact .actions a{
-    background-color: var(--first-color);
-    color: var(--white-color);
-}
-
 .contact .actions a:nth-child(2){
-    background-color: var(--white-color);
-    color: var(--first-color);
     border-color: var(--link-border-color);
 }
-
-
-/* ============== FOOTER ============== */
-.footer .line{
-    background-color: var(--white-color);
+.contact .heading .image-container{
+    border-top: 0.046975rem solid var(--section-border-color);
+    background-color: rgb(239, 239, 239);
 }
-
-
 
 
 
@@ -559,10 +529,8 @@ a, button{
     }
     /* --contact-- */
     .contact .heading .image-container{
-        border-top: 0.046975rem solid var(--section-border-color);
         width: 7.5rem;
         height: 7.5rem;
-        background-color: rgb(239, 239, 239);
     }
     /* --footer-- */
     .footer{
