--- a/public/output.css
+++ b/public/output.css
@@ -1074,13 +1074,22 @@ video {
   /* ---- colors ---- */
   --first-color: #242424;
   --white-color: hsl(0, 0%, 95%);
-  --aqua-color: aqua;
-  --section-border-color: rgba(187, 187, 187, 0.374);
+  --aqua-color: aqua
+    --section-border-color: rgba(187, 187, 187, 0.374);
   --link-border-color: rgba(212, 212, 212, 0.23);
   --text-color-light: hsl(0, 0%, 64%);
   --container-color: rgba(219, 219, 219, 0.441);
   --container-color-desktop: rgba(214, 214, 214, 0.921);
   --info-overlay-color: rgba(123, 123, 123, 0.744);
+  /* --white-color: #242424;
+    --first-color: hsl(0, 0%, 95%);
+    --aqua-color: aqua;
+    --section-border-color: rgba(187, 187, 187, 0.374);
+    --link-border-color: rgba(212, 212, 212, 0.23);
+    --text-color-light: hsl(0, 0%, 64%);
+    --container-color: rgba(219, 219, 219, 0.441);
+    --container-color-desktop:  #1e1e1e;
+    --info-overlay-color: rgba(123, 123, 123, 0.744); */
   /* ---- fonts ---- */
   --body-font: "Bai Jamjuree", sans-serif;
   /* -- font weights -- */
@@ -1250,33 +1259,17 @@ a, button{
   transition: 0.5s ease;
 }
 
-.page-loader .loader{
-  width: 45px;
-  aspect-ratio: 1;
-  --c:no-repeat linear-gradient(#000 0 0);
-  background: var(--c), var(--c), var(--c);
-  animation: 
-      l15-1 1s infinite,
-      l15-2 1s infinite;
+.page-loader .loader {
+  stroke-dasharray: 250;
+  stroke-dashoffset: 250;
+  animation: draw 2.65s forwards ease-in-out;
+  /* Draw animation */
 }
 
-@keyframes l15-1{
-  0%,100% {
-    background-size:20% 100%
-  }
-
-  33%,66% {
-    background-size:20% 40%
-  }
-}
-
-@keyframes l15-2{
-  0%,33%   {
-    background-position: 0    0,50% 100%,100% 100%
-  }
-
-  66%,100% {
-    background-position: 100% 0,0   100%,50%  100%
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+    /* Reveal the text */
   }
 }
 
